# config.nix

./: .gitignore  .sops.yaml  README.md  disko.nix  flake.nix  settings.nix
.github/workflows/: flake-check.yml
homes/weqeq/: default.nix
hosts/_template/: disko.nix  packages.nix  vars.nix
hosts/desktop/: disko.nix  vars.nix
hosts/vm-test/: default.nix  disko.nix  vars.nix
installer/: go.mod  go.sum
installer/cmd/finalize-system/: main.go
installer/cmd/install-host/: main.go
installer/cmd/rebuild-system/: main.go
installer/cmd/rekey-system/: main.go
installer/internal/installer/: disks.go  disks_test.go  engine.go  engine_test.go  finalize.go  hardware.go  hardware_test.go  rebuild.go  rekey.go  repo.go  sops.go  sops_test.go  types.go
installer/internal/tui/: model.go
installer_tui/: pyproject.toml
installer_tui/config_nix_installer/: app.py  backend.py
lib/: loadLocalState.nix  mkHome.nix  mkHost.nix  mkInstallPlan.nix  mkSystem.nix
modules/home/: base.nix
modules/nixos/: base.nix  boot.nix  config-nix-state.nix  desktop-audio.nix  graphics.nix  hyprland.nix  install-finalize.nix  nvidia.nix  qemu-guest.nix  secure-boot.nix  sops.nix  users.nix
scripts/: common.sh  finalize-host.sh  install-host.sh  rekey-host.sh  render-sops-config.sh
